# emerging-kb

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: defaults.yaml
config/doc_types/: email.yaml  executed_contract.yaml  handwritten_note.yaml  internal_memo_draft.yaml  sec_10k_filing.yaml
config/domains/: mixed_demo.yaml
config/prompts/: README.md
demo-corpus/: api-design-rfc.md  bank-statement.xlsx  bug-report-1234.txt  build.py  customer-case-study.md  discharge-summary.txt  expense-report.xlsx  incident-postmortem.md  ingest.py  it-incident-thread.eml  job-description-data-scientist.md  performance-review-2025.md  press-release-2026-q1.md  quarterly-financial-summary.md  vertex-amendment.txt  vertex-eval-notes.md  vertex-pricing-tiers.xlsx  vertex-sales-thread.eml  weekly-standup-notes.md
demo-corpus/eval/: adversarial-suite.yaml  coverage-matrix.md  cross-domain.yaml  multi-turn.yaml
docs/: RAG_AUDIT_AND_ACTION_PLAN.md  STATUS.md  api_contracts.md  architecture.md  build_tracker.md  chat_eval_queries.md  citations_audit.md  competitive_audit.md  construction_query_results.json  construction_query_results_v10.json  construction_query_results_v10_judged.json  construction_query_results_v2.json  construction_query_results_v3.json  construction_query_results_v4.json  construction_query_results_v5.json  construction_query_results_v6.json  construction_query_results_v7.json  construction_query_results_v7_judged.json  construction_query_results_v8.json  construction_query_results_v8_judged.json  construction_query_results_v9_judged.json  demo-corpus-eval-construction.md  entity_dedup_proposal_construction.yaml  entity_merge_proposal_construction.yaml  extraction_and_citation_plan.md  field_merge_proposal_construction.yaml  g-mode-status.md  gaps_design.md  problem_statement.md  red_team.md  scale_perf_audit.md  scenarios.md  ui_design.md  upload_flow_audit.md  walkthrough.md
docs/archive/: Problem_1.md  Problem_2.md  ui_design_v1.md
migrations/: runner.py
migrations/sql/: 0001_extensions.sql  0002_schema_migrations.sql  0003_audit_log.sql  0004_idempotency_keys.sql  0005_schemas.sql  0006_schema_versions.sql  0007_schema_hierarchy.sql  0008_parse_layer.sql  0009_chunks.sql  0010_contextual_chunks.sql  0011_chunk_embeddings.sql  0012_raptor.sql  0013_indexes.sql  0014_mentions.sql  0015_emergent_fields.sql  0016_atomic_units.sql  0017_extracted_entities.sql  0018_entities.sql  0019_query_log.sql  0020_config_overrides.sql  0021_domain_vocabulary.sql  0022_doc_chains.sql  0023_triples_relationships_graph.sql  0024_conflicts_authority.sql  0025_faithfulness_citations.sql  0026_query_modes.sql  0027_q_mode.sql  0028_audit_chain.sql  0029_chat_memory.sql  0030_corrections.sql  0031_query_log_citations_gin.sql  0032_source_positions.sql  0033_inventory_mode.sql  0034_fact_conflicts_chain_subject.sql  0035_chat_session_delete.sql  (+11 more)
prototype/: audit.html  chat.html  dashboard.html  doc-detail.html  explore.html  extraction-studio.html  index.html  package.json  playground.html  qa.mjs  qa_checklist.md  schema-studio.html  settings.html  upload.html  wiring_inventory.md
scripts/: backfill_doc_chains.py  backfill_doc_status.py  backfill_frontmatter.py  backfill_pdf_layout.py  backfill_source_positions.py  backfill_value_numeric.py  bootstrap_db.sh  cleanup_noise_entities.py  dedup_canonical_entities.py  dev_api.sh  dev_env.sh  dev_worker.sh  domain_review.py  ingest_batch.py  normalize_field_names.py  normalize_field_names_llm.py  normalize_subentity_keys.py  rebuild_graph_edges.py  reindex_weekly.sh  rerun_chain_detection.py  run_chat_eval.py  run_domain_queries.py  run_eval.sh  score_with_llm_judge.py  unstick_files.py  verify_phase_0.sh  verify_phase_10a.sh  verify_phase_10b.sh  verify_phase_1a.sh  verify_phase_1b.sh  verify_phase_1c.sh  verify_phase_2a.sh  verify_phase_2b.sh  verify_phase_2c.sh  verify_phase_3a.sh  verify_phase_3b.sh  verify_phase_3c.sh  verify_phase_3d.sh  verify_phase_3e.sh  verify_phase_4.sh  (+12 more)
tests/: conftest.py  test_anomaly_unit.py  test_api_query.py  test_atomic_units_unit.py  test_atomic_units_worker.py  test_audit_unit.py  test_auto_merging_unit.py  test_b1_api.py  test_b1_unit.py  test_b2_api.py  test_b2_unit.py  test_b3_api.py  test_b3_unit.py  test_b4a_api.py  test_b4a_unit.py  test_b4b_api.py  test_b4b_unit.py  test_b5_api.py  test_b5_unit.py  test_b6a_api.py  test_b6a_unit.py  test_b6b_api.py  test_b7_api.py  test_b9_api.py  test_b9_unit.py  test_canonical_dedup_unit.py  test_chunking_hierarchical_unit.py  test_chunking_unit.py  test_chunking_worker.py  test_conflict_resolution_unit.py  test_contextualization_gemini_unit.py  test_contextualization_unit.py  test_contextualization_worker.py  test_corpus_api.py  test_doc_chains_api.py  test_doc_chains_unit.py  test_email_messages_plugin.py  test_embeddings_unit.py  test_embeddings_worker.py  test_entities_repo_unit.py  (+63 more)
ui/: .gitignore  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
(+218 files in other folders)
