[project]
name = "emerging-kb"
version = "0.1.0"
description = "Emerging KB — multi-resolution knowledge base with dynamic schema and citation-grade retrieval."
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Aniket Tatipamula" }]

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # DB
    "psycopg[binary,pool]>=3.2.0",
    # Settings + validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Logging
    "structlog>=24.4.0",
    # Queue
    "procrastinate>=3.0.0",
    # Object store
    "minio>=7.2.0",
    # UUIDv7 (not yet in stdlib)
    "uuid-utils>=0.9.0",
    # Phase 2a — parse layer
    "docling>=2.0",
    "python-multipart>=0.0.12",
    # Phase 3a — chunking (token budgeting via cl100k_base)
    "tiktoken>=0.8.0",
    # Pin torch + torchvision as direct deps so [tool.uv.sources] applies
    # (sources only override packages listed in this project's dependencies).
    "torch>=2.0",
    "torchvision>=0.15",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "testcontainers[postgres,minio]>=4.7.0",
    "freezegun>=1.5.0",
    "ruff>=0.7.0",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kb"]

[tool.uv]
package = true

# Phase 2a — force CPU-only torch wheels. Docling pulls in PyTorch; default
# wheels include ~2 GB of CUDA libraries we don't use (Wave A worker is
# CPU-only on Linux containers + Mac dev). Saves ~2 GB per image + ~5x
# faster builds. Switch to GPU when we have a GPU-deployment story.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# Pin torch to the CPU index across all platforms. The `[index = "..."]`
# pattern requires `explicit = true` on the index so other packages aren't
# accidentally pulled from it; the package-level override here is mandatory.
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'darwin'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'darwin'" },
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "migrations", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM"]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"] # tests are allowed to be more verbose

[tool.pyright]
include = ["src", "migrations"]
typeCheckingMode = "basic"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
